--- a/src/app/features/components/file-browser/nautilus/sidebar/nautilus-sidebar.component.html
+++ b/src/app/features/components/file-browser/nautilus/sidebar/nautilus-sidebar.component.html
@@ -4,7 +4,7 @@
       <button class="nav-button" (click)="toggleSearchMode()" [class.active]="isSearchMode()">
         <mat-icon svgIcon="search"></mat-icon>
       </button>
-      <span>{{ title | translate }}</span>
+      <span>{{ title() | translate }}</span>
       <button
         class="nav-button"
         [cdkMenuTriggerFor]="sidebarMainMenu"
@@ -22,10 +22,10 @@
       <mat-list-item
         class="remote-list-item starred-item"
         (click)="starredSelected.emit()"
-        [class.selected]="starredMode"
+        [class.selected]="starredMode()"
         cdkDropList
         id="sidebar-starred"
-        [cdkDropListEnterPredicate]="canDropOnStarred"
+        [cdkDropListEnterPredicate]="canDropOnStarred()"
         (cdkDropListDropped)="droppedToStarred.emit($event)"
         [cdkDropListAutoScrollDisabled]="true"
         [cdkContextMenuTriggerFor]="sidebarStarredMenu"
@@ -41,60 +41,62 @@
       <mat-divider></mat-divider>
 
       <div class="bookmarks-section">
+        <!-- Permanent "Bookmarks" Header acting as the drop target -->
         <div
-          class="new-bookmark-placeholder"
+          class="sidebar-section-header"
           cdkDropList
-          [cdkDropListData]="bookmarks"
-          [cdkDropListEnterPredicate]="canDropOnBookmarks"
+          [cdkDropListData]="bookmarks()"
+          [cdkDropListEnterPredicate]="canDropOnBookmarks()"
           (cdkDropListDropped)="droppedToLocal.emit($event)"
+          id="sidebar-bookmarks-header"
         >
-          <mat-icon svgIcon="bookmark"></mat-icon>
-          <span>{{ 'nautilus.sidebar.newBookmark' | translate }}</span>
+          <span>{{ 'nautilus.titles.bookmarks' | translate }}</span>
         </div>
 
-        @for (bm of bookmarks; track trackByBookmark($index, bm)) {
-          <div
+        @for (bm of bookmarks(); track trackByBookmark($index, bm)) {
+          <mat-list-item
             cdkDropList
             [cdkDropListData]="bm"
-            [cdkDropListEnterPredicate]="canDropOnBookmark"
+            [cdkDropListEnterPredicate]="canDropOnBookmark()"
             (cdkDropListDropped)="droppedToBookmark.emit({ event: $event, target: bm })"
+            class="remote-list-item bookmark-item"
+            [class.selected]="isBookmarkSelected(bm)"
+            (click)="onOpenBookmark(bm)"
+            [cdkContextMenuTriggerFor]="sidebarBookmarkMenu"
+            [cdkContextMenuTriggerData]="{ $implicit: bm }"
+            (cdkContextMenuOpened)="bookmarkContextItem = bm"
           >
-            <mat-list-item
-              class="remote-list-item bookmark-item"
-              [class.selected]="isBookmarkSelected(bm)"
-              (click)="onOpenBookmark(bm)"
-              [cdkContextMenuTriggerFor]="sidebarBookmarkMenu"
-              [cdkContextMenuTriggerData]="{ $implicit: bm }"
-              (cdkContextMenuOpened)="bookmarkContextItem = bm"
-            >
-              <span class="remote-info">
-                <span class="remote-icon">
-                  <mat-icon
-                    [svgIcon]="
-                      bm.meta.remoteType ? iconService.getIconName(bm.meta.remoteType) : 'folder'
-                    "
-                  ></mat-icon>
-                  <p matLine>{{ bm.entry.Name }}</p>
-                </span>
+            <span class="remote-info">
+              <span class="remote-icon">
+                <mat-icon
+                  [svgIcon]="
+                    bm.meta.remoteType ? iconService.getIconName(bm.meta.remoteType) : 'folder'
+                  "
+                ></mat-icon>
+                <p matLine>{{ bm.entry.Name }}</p>
               </span>
-            </mat-list-item>
-          </div>
+            </span>
+          </mat-list-item>
         }
       </div>
 
-      @for (drive of localDrives; track trackByRemote($index, drive)) {
+      <div class="sidebar-section-header">
+        <span>{{ 'nautilus.titles.local' | translate }}</span>
+      </div>
+
+      @for (drive of localDrives(); track trackByRemote($index, drive)) {
         <mat-list-item
           class="remote-list-item"
           (click)="onSelectRemote(drive)"
           [class.selected]="
-            nautilusRemote?.name === drive.name && !starredMode && !isAnyBookmarkSelected()
+            nautilusRemote()?.name === drive.name && !starredMode() && !isAnyBookmarkSelected()
           "
           [cdkContextMenuTriggerFor]="sidebarRemoteMenu"
           [cdkContextMenuTriggerData]="{ $implicit: drive }"
           (cdkContextMenuOpened)="sideContextRemote.set(drive)"
           cdkDropList
           [cdkDropListData]="drive"
-          [cdkDropListEnterPredicate]="canAcceptFile"
+          [cdkDropListEnterPredicate]="canAcceptFile()"
           (cdkDropListDropped)="droppedToRemote.emit({ event: $event, target: drive })"
         >
           <span class="remote-info">
@@ -106,21 +108,23 @@
         </mat-list-item>
       }
 
-      <mat-divider></mat-divider>
+      <div class="sidebar-section-header">
+        <span>{{ 'nautilus.titles.cloud' | translate }}</span>
+      </div>
 
-      @for (remote of cloudRemotes; track trackByRemote($index, remote)) {
+      @for (remote of cloudRemotes(); track trackByRemote($index, remote)) {
         <mat-list-item
           (click)="onSelectRemote(remote)"
           [cdkContextMenuTriggerFor]="sidebarRemoteMenu"
           [cdkContextMenuTriggerData]="{ $implicit: remote }"
           (cdkContextMenuOpened)="sideContextRemote.set(remote)"
           [class.selected]="
-            nautilusRemote?.name === remote.name && !starredMode && !isAnyBookmarkSelected()
+            nautilusRemote()?.name === remote.name && !starredMode() && !isAnyBookmarkSelected()
           "
           class="remote-list-item"
           cdkDropList
           [cdkDropListData]="remote"
-          [cdkDropListEnterPredicate]="canAcceptFile"
+          [cdkDropListEnterPredicate]="canAcceptFile()"
           (cdkDropListDropped)="droppedToRemote.emit({ event: $event, target: remote })"
         >
           <span class="remote-info">
@@ -139,56 +143,48 @@
 
 <!-- Sidebar Menus -->
 <ng-template #sidebarStarredMenu>
-  <div class="nautilus-menu" cdkMenu>
+  <div class="material-context-menu" cdkMenu>
     <button class="menu-item" cdkMenuItem (click)="starredSelected.emit()">
-      <mat-icon svgIcon="star"></mat-icon>
-      <span>{{ 'nautilus.menu.openStarred' | translate }}</span>
+      <span>{{ 'nautilus.contextMenu.open' | translate }}</span>
     </button>
   </div>
 </ng-template>
 
 <ng-template #sidebarMainMenu>
-  <div class="nautilus-menu" cdkMenu>
-    <button class="menu-item" cdkMenuItem (click)="toggleSearchMode()">
-      <mat-icon svgIcon="search"></mat-icon>
-      <span>{{ 'nautilus.menu.search' | translate }}</span>
+  <div class="material-context-menu" cdkMenu>
+    <button class="menu-item" cdkMenuItem (click)="requestShortcuts.emit()">
+      <span>{{ 'shortcuts.title' | translate }}</span>
     </button>
   </div>
 </ng-template>
 
 <ng-template #sidebarRemoteMenu let-remote>
-  <div class="nautilus-menu" cdkMenu>
+  <div class="material-context-menu" cdkMenu>
     <button class="menu-item" cdkMenuItem (click)="onSelectRemote(remote)">
-      <mat-icon [svgIcon]="iconService.getIconName(remote.type)"></mat-icon>
-      <span>{{ 'nautilus.menu.openRemote' | translate }}</span>
+      <span>{{ 'nautilus.contextMenu.open' | translate }}</span>
     </button>
     <button class="menu-item" cdkMenuItem (click)="requestAbout.emit(remote)">
-      <mat-icon svgIcon="info"></mat-icon>
-      <span>{{ 'nautilus.menu.about' | translate }}</span>
+      <span>{{ 'nautilus.contextMenu.about' | translate }}</span>
     </button>
     @if (supportsCleanup(remote)) {
       <button class="menu-item danger" cdkMenuItem (click)="requestCleanup.emit(remote)">
-        <mat-icon svgIcon="trash"></mat-icon>
-        <span>{{ 'nautilus.menu.emptyTrash' | translate }}</span>
+        <span>{{ 'nautilus.contextMenu.emptyTrash' | translate }}</span>
       </button>
     }
   </div>
 </ng-template>
 
 <ng-template #sidebarBookmarkMenu let-bookmark>
-  <div class="nautilus-menu" cdkMenu>
+  <div class="material-context-menu" cdkMenu>
     <button class="menu-item" cdkMenuItem (click)="onOpenBookmark(bookmark)">
-      <mat-icon svgIcon="folder-open"></mat-icon>
-      <span>{{ 'nautilus.menu.openBookmark' | translate }}</span>
+      <span>{{ 'nautilus.contextMenu.open' | translate }}</span>
     </button>
     <button class="menu-item" cdkMenuItem (click)="requestProperties.emit(bookmark)">
-      <mat-icon svgIcon="info"></mat-icon>
-      <span>{{ 'nautilus.menu.properties' | translate }}</span>
+      <span>{{ 'nautilus.contextMenu.properties' | translate }}</span>
     </button>
     <mat-divider></mat-divider>
     <button class="menu-item danger" cdkMenuItem (click)="requestBookmarkRemoval.emit(bookmark)">
-      <mat-icon svgIcon="trash"></mat-icon>
-      <span>{{ 'nautilus.menu.removeBookmark' | translate }}</span>
+      <span>{{ 'nautilus.contextMenu.removeBookmark' | translate }}</span>
     </button>
   </div>
 </ng-template>
